--- a/code/filesys/Makefile.depends
+++ b/code/filesys/Makefile.depends
@@ -98,7 +98,7 @@ thread_test_simple.o: ../threads/thread_test_simple.cc \
  ../machine/translation_entry.hh ../threads/scheduler.hh ../lib/list.hh \
  ../lib/utility.hh ../machine/interrupt.hh ../machine/statistics.hh \
  ../machine/timer.hh ../filesys/synch_disk.hh ../threads/lock.hh \
- ../threads/semaphore.hh
+ ../threads/semaphore.hh ../threads/semaphore.hh
 assert.o: ../lib/assert.cc ../lib/assert.hh
 debug.o: ../lib/debug.cc ../lib/debug.hh ../lib/debug_opts.hh \
  ../lib/utility.hh ../lib/assert.hh ../machine/system_dep.hh
