--- a/code/threads/Makefile.depends
+++ b/code/threads/Makefile.depends
@@ -55,7 +55,7 @@ thread_test_simple.o: ../threads/thread_test_simple.cc \
  ../threads/thread.hh ../lib/utility.hh ../lib/assert.hh ../lib/debug.hh \
  ../lib/debug_opts.hh ../machine/system_dep.hh ../threads/scheduler.hh \
  ../lib/list.hh ../lib/utility.hh ../machine/interrupt.hh \
- ../machine/statistics.hh ../machine/timer.hh
+ ../machine/statistics.hh ../machine/timer.hh ../threads/semaphore.hh
 assert.o: ../lib/assert.cc ../lib/assert.hh
 debug.o: ../lib/debug.cc ../lib/debug.hh ../lib/debug_opts.hh \
  ../lib/utility.hh ../lib/assert.hh ../machine/system_dep.hh
