--- a/code/vmem/Makefile.depends
+++ b/code/vmem/Makefile.depends
@@ -85,7 +85,8 @@ thread_test_simple.o: ../threads/thread_test_simple.cc \
  ../userprog/address_space.hh ../filesys/file_system.hh \
  ../filesys/open_file.hh ../machine/translation_entry.hh \
  ../threads/scheduler.hh ../lib/list.hh ../lib/utility.hh \
- ../machine/interrupt.hh ../machine/statistics.hh ../machine/timer.hh
+ ../machine/interrupt.hh ../machine/statistics.hh ../machine/timer.hh \
+ ../threads/semaphore.hh
 assert.o: ../lib/assert.cc ../lib/assert.hh
 debug.o: ../lib/debug.cc ../lib/debug.hh ../lib/debug_opts.hh \
  ../lib/utility.hh ../lib/assert.hh ../machine/system_dep.hh
