--- a/code/threads/Makefile.depends
+++ b/code/threads/Makefile.depends
@@ -39,6 +39,7 @@ thread.o: ../threads/thread.cc ../threads/thread.hh ../lib/utility.hh \
  ../lib/utility.hh ../machine/interrupt.hh ../machine/statistics.hh \
  ../machine/timer.hh
 thread_test.o: ../threads/thread_test.cc ../threads/thread_test_garden.hh \
+ ../threads/thread_test_garden_semaphore.hh \
  ../threads/thread_test_prod_cons.hh ../threads/thread_test_simple.hh \
  ../lib/utility.hh ../lib/assert.hh ../lib/debug.hh ../lib/debug_opts.hh \
  ../machine/system_dep.hh
@@ -48,6 +49,13 @@ thread_test_garden.o: ../threads/thread_test_garden.cc \
  ../lib/debug_opts.hh ../machine/system_dep.hh ../threads/scheduler.hh \
  ../lib/list.hh ../lib/utility.hh ../machine/interrupt.hh \
  ../machine/statistics.hh ../machine/timer.hh
+thread_test_garden_semaphore.o: \
+ ../threads/thread_test_garden_semaphore.cc \
+ ../threads/thread_test_garden_semaphore.hh ../threads/system.hh \
+ ../threads/thread.hh ../lib/utility.hh ../lib/assert.hh ../lib/debug.hh \
+ ../lib/debug_opts.hh ../machine/system_dep.hh ../threads/scheduler.hh \
+ ../lib/list.hh ../lib/utility.hh ../machine/interrupt.hh \
+ ../machine/statistics.hh ../machine/timer.hh ../threads/semaphore.hh
 thread_test_prod_cons.o: ../threads/thread_test_prod_cons.cc \
  ../threads/thread_test_prod_cons.hh
 thread_test_simple.o: ../threads/thread_test_simple.cc \
@@ -101,6 +109,8 @@ thread.o: ../threads/thread.hh ../lib/utility.hh ../lib/assert.hh \
  ../lib/debug.hh ../lib/debug_opts.hh ../machine/system_dep.hh
 thread_test.o: ../threads/thread_test.hh
 thread_test_garden.o: ../threads/thread_test_garden.hh
+thread_test_garden_semaphore.o: \
+ ../threads/thread_test_garden_semaphore.hh
 thread_test_prod_cons.o: ../threads/thread_test_prod_cons.hh
 thread_test_simple.o: ../threads/thread_test_simple.hh
 assert.o: ../lib/assert.hh
