--- a/code/filesys/Makefile.depends
+++ b/code/filesys/Makefile.depends
@@ -70,6 +70,7 @@ thread.o: ../threads/thread.cc ../threads/thread.hh ../lib/utility.hh \
  ../machine/statistics.hh ../machine/timer.hh ../filesys/synch_disk.hh \
  ../threads/lock.hh ../threads/semaphore.hh
 thread_test.o: ../threads/thread_test.cc ../threads/thread_test_garden.hh \
+ ../threads/thread_test_garden_semaphore.hh \
  ../threads/thread_test_prod_cons.hh ../threads/thread_test_simple.hh \
  ../lib/utility.hh ../lib/assert.hh ../lib/debug.hh ../lib/debug_opts.hh \
  ../machine/system_dep.hh
@@ -85,6 +86,19 @@ thread_test_garden.o: ../threads/thread_test_garden.cc \
  ../lib/utility.hh ../machine/interrupt.hh ../machine/statistics.hh \
  ../machine/timer.hh ../filesys/synch_disk.hh ../threads/lock.hh \
  ../threads/semaphore.hh
+thread_test_garden_semaphore.o: \
+ ../threads/thread_test_garden_semaphore.cc \
+ ../threads/thread_test_garden_semaphore.hh ../threads/system.hh \
+ ../threads/thread.hh ../lib/utility.hh ../lib/assert.hh ../lib/debug.hh \
+ ../lib/debug_opts.hh ../machine/system_dep.hh ../machine/machine.hh \
+ ../machine/exception_type.hh ../machine/mmu.hh ../machine/disk.hh \
+ ../machine/translation_entry.hh ../machine/single_stepper.hh \
+ ../userprog/address_space.hh ../filesys/file_system.hh \
+ ../filesys/open_file.hh ../filesys/directory_entry.hh ../machine/disk.hh \
+ ../machine/translation_entry.hh ../threads/scheduler.hh ../lib/list.hh \
+ ../lib/utility.hh ../machine/interrupt.hh ../machine/statistics.hh \
+ ../machine/timer.hh ../filesys/synch_disk.hh ../threads/lock.hh \
+ ../threads/semaphore.hh ../threads/semaphore.hh
 thread_test_prod_cons.o: ../threads/thread_test_prod_cons.cc \
  ../threads/thread_test_prod_cons.hh
 thread_test_simple.o: ../threads/thread_test_simple.cc \
@@ -391,6 +405,8 @@ thread.o: ../threads/thread.hh ../lib/utility.hh ../lib/assert.hh \
  ../machine/translation_entry.hh
 thread_test.o: ../threads/thread_test.hh
 thread_test_garden.o: ../threads/thread_test_garden.hh
+thread_test_garden_semaphore.o: \
+ ../threads/thread_test_garden_semaphore.hh
 thread_test_prod_cons.o: ../threads/thread_test_prod_cons.hh
 thread_test_simple.o: ../threads/thread_test_simple.hh
 assert.o: ../lib/assert.hh
