--- a/code/userprog/Makefile.depends
+++ b/code/userprog/Makefile.depends
@@ -61,6 +61,7 @@ thread.o: ../threads/thread.cc ../threads/thread.hh ../lib/utility.hh \
  ../threads/scheduler.hh ../lib/list.hh ../lib/utility.hh \
  ../machine/interrupt.hh ../machine/statistics.hh ../machine/timer.hh
 thread_test.o: ../threads/thread_test.cc ../threads/thread_test_garden.hh \
+ ../threads/thread_test_garden_semaphore.hh \
  ../threads/thread_test_prod_cons.hh ../threads/thread_test_simple.hh \
  ../lib/utility.hh ../lib/assert.hh ../lib/debug.hh ../lib/debug_opts.hh \
  ../machine/system_dep.hh
@@ -74,6 +75,18 @@ thread_test_garden.o: ../threads/thread_test_garden.cc \
  ../filesys/open_file.hh ../machine/translation_entry.hh \
  ../threads/scheduler.hh ../lib/list.hh ../lib/utility.hh \
  ../machine/interrupt.hh ../machine/statistics.hh ../machine/timer.hh
+thread_test_garden_semaphore.o: \
+ ../threads/thread_test_garden_semaphore.cc \
+ ../threads/thread_test_garden_semaphore.hh ../threads/system.hh \
+ ../threads/thread.hh ../lib/utility.hh ../lib/assert.hh ../lib/debug.hh \
+ ../lib/debug_opts.hh ../machine/system_dep.hh ../machine/machine.hh \
+ ../machine/exception_type.hh ../machine/mmu.hh ../machine/disk.hh \
+ ../machine/translation_entry.hh ../machine/single_stepper.hh \
+ ../userprog/address_space.hh ../filesys/file_system.hh \
+ ../filesys/open_file.hh ../machine/translation_entry.hh \
+ ../threads/scheduler.hh ../lib/list.hh ../lib/utility.hh \
+ ../machine/interrupt.hh ../machine/statistics.hh ../machine/timer.hh \
+ ../threads/semaphore.hh
 thread_test_prod_cons.o: ../threads/thread_test_prod_cons.cc \
  ../threads/thread_test_prod_cons.hh
 thread_test_simple.o: ../threads/thread_test_simple.cc \
@@ -283,6 +296,8 @@ thread.o: ../threads/thread.hh ../lib/utility.hh ../lib/assert.hh \
  ../machine/translation_entry.hh
 thread_test.o: ../threads/thread_test.hh
 thread_test_garden.o: ../threads/thread_test_garden.hh
+thread_test_garden_semaphore.o: \
+ ../threads/thread_test_garden_semaphore.hh
 thread_test_prod_cons.o: ../threads/thread_test_prod_cons.hh
 thread_test_simple.o: ../threads/thread_test_simple.hh
 assert.o: ../lib/assert.hh
